[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=0.12"]

[tool]
[tool.poetry]
authors = ["Paul Tonning <paul.tonning@student.vvc.edu>"]
description = ""
name = "cis83-liststuples"
version = "0.1.0"
[tool.poetry.dependencies]
Faker = "^4.0"
python = "^3.7"
[tool.poetry.dev-dependencies]
